fix: preserve dark mode

--- a/frontend/movies_frontend/src/index.css
+++ b/frontend/movies_frontend/src/index.css
@@ -1,6 +1,12 @@
 @import 'tailwindcss';
 @import 'tailwindcss/utilities';
 
+@important #root;
+@core-plugins preflight;
+@custom-variant dark &:is(#root.dark, #root.dark *);
+@content './index.html';
+@content './src/**/*.{js,ts,jsx,tsx}';
+
 @layer base {
   body {
     @apply bg-slate-200;
